@@ -40,6 +40,7 @@ body {
 
 .content-wrapper {
   max-width: 80%;
+  min-height: 78vh;
   margin: 0 auto;
   width: 100%;
   flex: 1;
